# cali

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml  release.toml  test.txt
.github/workflows/: release.yml
src/: app.rs  currency.rs  evaluator.rs  main.rs  parser.rs  tests.rs  ui.rs
wix/: main.wxs
