[package]
name = "cali"
version = "0.5.4"
edition = "2024"
description = "A terminal calculator with real-time evaluation, unit conversions, and natural language expressions."
authors = ["Borhan Saflo"]
license = "MIT"
repository = "https://github.com/BorhanSaflo/cali"
documentation = "https://github.com/BorhanSaflo/cali#readme"
readme = "README.md"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
chrono = "0.4.35"
regex = "1.10.3"
rust_decimal = "1.34.2"
once_cell = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
arboard = "3.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build for
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "x86_64-apple-darwin"]
# Publish to crates.io when releasing
publish = true

[package.metadata.wix]
upgrade-guid = "84F568F9-3A00-41C7-9C37-8CD8359101D0"
path-guid = "7DFBDB74-C368-4CB9-806F-BA7FFC11FC7E"
license = false
eula = false
