[package]
name = "cali"
version = "0.8.0"
edition = "2024"
description = "A terminal calculator with real-time evaluation, unit conversions, and natural language expressions."
authors = ["Borhan Saflo"]
license = "MIT"
repository = "https://github.com/BorhanSaflo/cali"
documentation = "https://github.com/BorhanSaflo/cali#readme"
homepage = "https://github.com/BorhanSaflo/cali#readme"
readme = "README.md"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
chrono = "0.4.35"
regex = "1.10.3"
rust_decimal = "1.34.2"
once_cell = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
arboard = "3.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

